SERVER-21160: revert woCompare to using unsigned comparison for Timestamp